assets/main.scss
html {
    font-family: sans-serif;
    color: black;
}
body {
    max-width: 920px;
    margin: 0 auto;
    padding-top: 5rem;
    padding: 1rem;
}
content {
    float: left;
    max-width: 720px;
    width: 70%;
    margin: auto;
}
aside {
    width: 30%;
    float: right;
}

// decription lists
d1 {
    display: grid;
    grid-template-columns: auto 1fr;
    grid-gap: .2rem 1rem;
}
dt {
    text-align: left;
    float: left;
}
dd {
    text-align: left;
    float: right;
}
/*Base Mobile Layout*/
.wrap {
    width: 90%;
    margin: 0 auto;
}
/*2 Column Layout*/
@media only screen and (min-width: 920px) {
    .wrap {
        width: 920px;
        margin: 0 auto;
    }
    #content {
        max-width: 720px;
        width: 60%;
        float: left;
    }
    #sidebar-right {
        width: 500px;
        width: 30%;
        float: right;
    }
}

p {
    line-height: 1.3;
}
/*pub list*/
.pub-title {
    line-height: 2;
}
.pub-author {
    line-height: 1.2;
}
.pub-abs {
    line-height: 1.3;
}
a.button {
    -webkit-appearance: button;
    -moz-appearance: button;
    appearance: button;
    padding-right: 10px;
}

